* Fixed nifty bug with text selection  * Fixed issue with OgreXML models which had empty bone tracks in animation